Fixed Footer styling on mobile and edited hacks 1 banner slightly

--- a/style/main.mobile.css
+++ b/style/main.mobile.css
@@ -61,6 +61,11 @@
 
 	.container a {
 		display: block;
+		margin: 0px;
+	}
+
+	footer > div {
+		padding: 20px;
 	}
 }
 
